[PECO-1815] Support Java-8 in JDBC driver (#378)
* package built succesfully with java 8

* spotless and distribution changed

* wiremock version updated

* workflow changes

---------