@@ -59,9 +59,9 @@
   </distributionManagement>
   <properties>
     <arrow.version>13.0.0</arrow.version>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <mockito.version>5.2.0</mockito.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <mockito.version>3.12.4</mockito.version>
     <jackson.version>2.15.1</jackson.version>
     <log4j.version>2.22.1</log4j.version>
     <slf4j.version>2.0.13</slf4j.version>
@@ -208,9 +208,9 @@
       <version>${annotation.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.wiremock</groupId>
-      <artifactId>wiremock</artifactId>
-      <version>${wiremock.version}</version>
+      <groupId>com.github.tomakehurst</groupId>
+      <artifactId>wiremock-jre8</artifactId>
+      <version>2.35.0</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -263,7 +263,7 @@
           </excludes>
           <argLine>
             @{argLine}
-            --add-opens=java.base/java.nio=ALL-UNNAMED
+<!--            &#45;&#45;add-opens=java.base/java.nio=ALL-UNNAMED-->
             -Dnet.bytebuddy.experimental=true
           </argLine>
         </configuration>
@@ -307,20 +307,19 @@
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
-        <version>2.39.0</version>
+        <version>2.17.5</version>
         <executions>
           <execution>
-            <id>format</id>
             <goals>
+              <goal>check</goal>
               <goal>apply</goal>
             </goals>
-            <phase>compile</phase>
           </execution>
         </executions>
         <configuration>
           <java>
             <googleJavaFormat>
-              <version>1.18.1</version>
+              <version>1.7</version>
             </googleJavaFormat>
           </java>
         </configuration>
